Change button text in index.html
Updated button text from 'Touch me 😋😏😏' to 'Click me'.

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </header>
         <main>
             <h3>Intramural players</h3>
-            <input type="button" value="Touch me 😋😏😏" id="BUTTON" py-click="show_players"/>
+            <input type="button" value="Click me" id="BUTTON" py-click="show_players"/>
             <div id="output"></div>
         </main>
 
@@ -50,3 +50,4 @@
         <py-script src="main.py"></py-script>
     </body>
 </html>
+
